Kubernetes/postgres.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: default
  labels:
    app: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      name: postgres
      labels:
        app: postgres
    spec:
      restartPolicy: Always
      containers:
      - name: postgres
        image: postgres:12
        ports:
        - containerPort: 5432
      volumes:
        -name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-dev
      volumeMounts:
        -name: postgres-data
          mountPath: /var/lib/postgresql/data/data
