Kubernetes/result.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: result
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      name: result
      labels:
        app: result
    spec:
      restartPolicy: Always
      containers:
        - name: result
          image: epitechcontent/t-dop-600-result:k8s
          resources:
            limits:
              memory: "128Mi"
          ports:
          - containerPort: 80
            name: result
