Kubernetes/worker.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: worker
  labels:
    app: worker
spec:
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      name: worker
      labels:
        app: worker
    spec:
      restartPolicy: Always
      containers:
        - name: worker
          image: epitechcontent/t-dop-600-worker:k8s
          resources:
            limits:
              memory: "256Mi"
