Kubernetes/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
    selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
