Kubernetes/poll.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poll-ingress
spec:
  rules:
  - http:
      paths:
      - path:
        backend:
          service:
            name: poll
            port:
              number: 80
